Re-doing my homwwork for day 1

--- a/index.html
+++ b/index.html
@@ -2,21 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Spam questions</title>
   </head>
   <body>
     <h1>Hello TA's</h1>
-    <script>
-      var question1 = prompt('What is your name?')
-      alert('Hello '+ question1 +' My name is Adan')
-      var question2 = confirm('Is it raining outside?')
-      alert('How should i know I\'m just vanilla JavaScript')
-      var question3 = prompt('What your favorite food?')
-      alert(question3 +' is good, my favorite food is pizza.')
-      var question4 = prompt('Do you play video games?')
-      alert('I like playing video games')
-      var question5 = prompt('what your favorite place to vacation?')
-      alert(question5 +' is nice, my favorite place to vacation is Tokyo, Japan' )
-    </script>
+  <script src='app.js'></script>
   </body>
 </html>
