--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Spam questions</title>
+    <title>About me!</title>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <h1>Hello TA's</h1>
-  <script src='app.js'></script>
+    <section id= 'top'>
+      <h1>About Adan Rabadan</h1>
+      <p><strong>Hello my name is Adan Rabadan. I'm a Student at Code Fellows in Seattle, WA and this is my about me page. Enjoy!</strong></p>
+    </section>
+    <section id='center'>
+    <p>I'm first generation born in America both my parent came to America from Mexico illegally with nothing but now both are USA citizens. I use my parent sacrifice as my motivation to succeed in life. I'm also the first member of my family to join the military, I served 8 years United States Air Force as Active duty. Thanks to my time in the military I got to travel to several country and experience all different culture around the world. After I left the military I became a CNC machinist where I learned to operate and program for CNC machines. Machining was not for me but I like to write the programs so I decide to attend Code Fellows to learn to code.</p>
+    <figure class="Cicero">
+      <a href="http://www.thetownofcicero.com/"><img src="http://farm9.static.flickr.com/8384/8593528189_d598951816.jpg" target="_blank" alt="Sign from cicero"style="width:400px;height:400px;border:0;">
+      </a>
+      <figcaption>An image with a link to my home town's webpage.</figcaption>
+    </figure>
+  </section>
+  <script src = "app.js" ></script>
   </body>
 </html>
