still workin on question 7

--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       <p><strong>Hello my name is Adan Rabadan. I'm a Student at Code Fellows in Seattle, WA and this is my about me page. Enjoy!</strong></p>
     </section>
     <section id='intro'>
-    <p>I'm first generation born in America both my parent came to America from Mexico illegally with nothing but now both are USA citizens. I use my parent sacrifice as my
-       motivation to succeed in life. I'm also the first member of my family to join the military, I served 8 years United States Air Force as Active duty. Thanks to my time
-       in the military I got to travel to several country and experience all different culture around the world. After I left the military I became a CNC machinist where I learned
-       to operate and program for CNC machines. Machining was not for me but I like to write the programs so I decide to attend Code Fellows to learn to code.</p>
+    <p>I'm first generation born in America both my parent came to America from Mexico illegally with nothing but now both are USA citizens. I use my parent sacrifice as my motivation to succeed in life. I'm also the first member of my family to join the military, I served 8 years United States Air Force as Active duty. Thanks to my time in the military I got to travel to several country and experience all different culture around the world. After I left the military I became a CNC machinist where I learned to operate and program for CNC machines. Machining was not for me but I like to write the programs so I decide to attend Code Fellows to learn to code.</p>
   </section>
   <div id='center'>
     <p>I'm originially from Cicero, IL if you are intrested in learning about my hometown click on the image on the right.</p>
